[signin] Fix DCHECK in GetAccountsForDicePromos()

This function is called by the settings page even when the user is not
signed-in.
The DCHECK can be removed, because it was not actually necessary.

Bug: 820083
Change-Id: I910e1b22acf99a2c3d755523569a67c2ef252dfa
Reviewed-on: https://chromium-review.googlesource.com/957184
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Commit-Queue: David Roger <droger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542762}
Former-commit-id: 8fc5347404d27ea7f74c418148e480dee4702141